--- a/AppCucinaProject/app/src/main/res/values/strings.xml
+++ b/AppCucinaProject/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+﻿<resources>
     <string name="app_name">AppCucinaProject</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -21,6 +21,15 @@
         <item>"Secondo"</item>
         <item>"Dolce"</item>
     </string-array>
+
+     <string-array name="ingredienti">
+        <item>"Ingrediente 1"</item>
+        <item>"Ingrediente 2"</item>
+        <item>"Ingrediente 3"</item>
+        <item>"Ingrediente 4"</item>
+        <item>"Ingrediente 5"</item>
+        <item>"Ingrediente 6"</item>
+     </string-array>
 
 
     <string name="large_text">
@@ -112,4 +121,5 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="title_activity_menu_del_giorno">Menu del giorno</string>
 </resources>
