aggiunta tab layout per visualizzare risultati ricerca avanzata

--- a/AppCucinaProject/app/src/main/res/values/strings.xml
+++ b/AppCucinaProject/app/src/main/res/values/strings.xml
@@ -48,4 +48,8 @@
     </string>
     <string name="title_activity_menu_del_giorno">Menu del giorno</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
+    <string name="title_activity_visualizzazione__ricerca_av">Visualizzazione_Ricerca_av</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
