--- a/AppCucinaProject/app/src/main/res/values/strings.xml
+++ b/AppCucinaProject/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 ﻿<resources>
-    <string name="app_name">AppCucinaProject</string>
+    <string name="app_name">AppCucina</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
